# config-weaver

./: .gitignore  README  README.md  pyproject.toml
data/: auth_rules.json  base.json.enc  config-weaver  config-weaver.env  config-weaver.service  env  platform_rules.json  sailor-tailor.service  user_rules.json  version_rules.json
data/templates/: Caddyfile  agent_platform_dict.sing-box.json  agent_rules.json  auth_rules.json  platform_rule.sing-box.json  user_rules.json  version_rules.json
debian/: changelog  config-weaver.install  control  copyright  rules  sailor-tailor.install
src/config_weaver/: __main__.py  arg_funcs.py  arg_parser.py  manager_helper.py  meta.py
src/config_weaver/auth/: authenticator.py  credential_handler.py
src/config_weaver/config_managing/: builder.py  editor.py  encryptor.py  hasher.py  secret_generator.py
src/config_weaver/encrypt/: encryptor.py
src/config_weaver/file_managers/: auth_manager.py  config_manager.py  file_data.py  patch_manager.py
src/config_weaver/hash/: hasher.py
src/config_weaver/network/: app.py  http_revoker.py  request_handler.py  request_parser.py  service_starter.py
src/config_weaver/patch/: agent_patcher.py  conditional_node_maker.py  conditional_node_parser.py  user_patcher.py  version_patcher.py
src/config_weaver/utils/: file_operator.py  (+3 more)
src/sailor_tailor/: app_helper.py  authenticator.py  config_manager.py  config_manager_factory.py  encryptor.py  exceptions.py  file_operator.py  http_api.py  http_request_handler.py  json_helper.py  main.py  platform_tailor.py  profile_generator.py  profile_modifier.py  profile_patcher.py  profile_placeholder_swapper.py  profile_selector.py  user_tailor.py  version_tailor.py
(+8 files in other folders)
