[project]
name = "config-weaver"
version = "0.2.0"
description = "A lightweight config distribution service with document-level JSON patching, enabling dynamic, server-side transformation and delivery using minimal, GET-only clients"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "argon2-cffi",
    "cryptography",
    "packaging",
    "portalocker",
]

[project.scripts]
config_weaver = "config_weaver.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
